kubernetes/infrastructure/plexus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plexus
  labels:
    name: plexus
