kubernetes/infrastructure/plexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plexus
  namespace: plexus
spec:
  selector:
    app: plexus
  ports:
    - name: http
      port: 4000
      targetPort: http
