kubernetes/infrastructure/plexus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plexus
  namespace: plexus
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
      sectionName: https-domain1
    - name: external-gateway
      namespace: kube-system
      sectionName: http-domain1
  hostnames:
    - "plexus.${DOMAIN1}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: plexus
          port: 4000
